[package]
name = "bot-father"
version = "0.1.0"
edition = "2021"
description = "WASI module for managing multiple NEAR accounts with AI-generated names"

[[bin]]
name = "bot-father"
path = "src/main.rs"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WIT bindings for NEAR RPC host functions
wit-bindgen = "0.36"

# HTTP client for AI completion (WASI P2)
wasi-http-client = "0.2"

# Cryptographic operations for key derivation and transaction signing
sha2 = "0.10"
ed25519-dalek = { version = "2.1", default-features = false, features = ["alloc"] }
bs58 = "0.5"
hex = "0.4"
borsh = "1.5"
base64 = "0.22"

[profile.release]
opt-level = "s"
lto = true
strip = true
